src/test/resources/refCompilerOutput/invalid/syntaxErr/basic/badComment2.waccast
-- Compiling...
Errors detected during compilation! Exit code 100 returned.
Syntactic Error at 12:19 -- mismatched input 'I' expecting {'[', '='}
Syntactic Error at 12:55 -- token recognition error at: '?'
1 parser error(s) detected, no further compilation attempted.
